--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -39,8 +39,7 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        #sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
-        sudo -E apt-get -qq install build-essential libncurses5-dev bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip htop wget curl -y
+        sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl -y
         sudo -E apt-get -qq build-dep linux -y
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
