--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -37,6 +37,7 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        sudo -E sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
         sudo -E apt-get -qq update
         sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl -y
         sudo -E apt-get -qq build-dep linux -y
