--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -56,11 +56,6 @@ jobs:
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
 
-    - name: Load custom configuration
-      working-directory: /workdir
-      run: |
-        wget https://raw.githubusercontent.com/ylx2016/kernel/master/.config
-
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
@@ -74,6 +69,7 @@ jobs:
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
+        wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/.config
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         echo | echo | echo | echo | echo | echo | echo | echo | echo | time make -j$(nproc) deb-pkg | 
