--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -19,7 +19,7 @@ on:
 env:
   CONFIG_FILE: .config
   UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
+  UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: false
