--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -72,7 +72,7 @@ jobs:
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/.config
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
-        echo | echo | echo | echo | echo | echo | echo | echo | echo | time make -j$(nproc) deb-pkg | 
+        time make -j$(nproc) deb-pkg
         echo "::set-output name=status::success"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
