--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -70,7 +70,7 @@ jobs:
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
-        wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/.config
+        wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) deb-pkg
