--- a/.github/workflows/Ubuntu_kernel_5.10_bbrplus_test_5.11.yml
+++ b/.github/workflows/Ubuntu_kernel_5.10_bbrplus_test_5.11.yml
@@ -6,7 +6,7 @@
 # Change from P3TERX
 #
 
-name: Build Ubuntu Kernel Test BBRPLUS 5.11
+name: Ubuntu Kernel 5.11 BBRPLUS TEST
 
 on:
   repository_dispatch:
