--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -19,7 +19,7 @@ on:
 
 env:
   CONFIG_FILE: .config
-  UPLOAD_DIR: true
+  UPLOAD_DIR: false
   UPLOAD_KERNEL: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
