--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -11,11 +11,11 @@ name: Ubuntu Kernel Latest
 on:
   repository_dispatch:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+   # inputs:
+    #  ssh:
+     #   description: 'SSH connection to Actions'
+      #  required: false
+       # default: 'false'
 
 env:
   CONFIG_FILE: .config
