--- a/.github/workflows/Ubuntu_kernel_5.11_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_5.11_bbrplus.yml
@@ -104,7 +104,7 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_bbrplus_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "::set-output name=status::success"
 
