--- a/.github/workflows/Ubuntu_kernel_5.10_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_5.10_bbrplus.yml
@@ -107,7 +107,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
+        files: /workdir/upload/*
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
