--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: intall deps
       run: |
-        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl epel*
+        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl epel* openssh
         yum groups install development -y 
         yum -y install devtoolset-9 devtoolset-9-libatomic-devel htop
 
