--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -40,7 +40,9 @@ jobs:
 
     - name: intall deps
       run: |
-        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl epel* openssh
+        yum update -y
+        yum install epel-release -y && yum install ansible -y && yum install openssh-clients -y
+        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl
         yum groups install development -y 
         yum -y install devtoolset-9 devtoolset-9-libatomic-devel htop
 
