--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -33,12 +33,13 @@ jobs:
       
     - name: intall deps
       run: |
+        rm -rf /github && mkdir /github && mkdir /github/home && mkdir /github/home/.ssh/
         yum update -y
         yum install epel-release -y && yum install ansible -y && yum install openssh-clients -y
         yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl
         yum groups install development -y 
         yum -y install devtoolset-9 devtoolset-9-libatomic-devel htop
-        mkdir /github && mkdir /github/home && mkdir /github/home/.ssh/
+        rm -rf /github && mkdir /github && mkdir /github/home && mkdir /github/home/.ssh/
         
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
