--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -35,9 +35,9 @@ jobs:
       run: |
         yum update -y
         yum install epel-release -y && yum install ansible -y && yum install openssh-clients -y
-        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl
+        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl jq htop
         yum groups install development -y 
-        yum -y install devtoolset-9 devtoolset-9-libatomic-devel htop
+        yum -y install devtoolset-9 devtoolset-9-libatomic-devel
         mkdir /github/home/.ssh/
         
     - name: SSH connection to Actions
