--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -38,7 +38,7 @@ jobs:
         yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl jq htop
         yum groups install development -y 
         yum -y install devtoolset-9 devtoolset-9-libatomic-devel
-        mkdir /github/home/.ssh/
+        mkdir /github/home/.ssh/ && mkdir /workdir
         
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
