--- a/.github/workflows/Ubuntu_kernel_5.11_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_5.11_bbrplus.yml
@@ -92,7 +92,7 @@ jobs:
 
     - name: Generate release tag
       id: tag
-      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_bbrplus_$(date +"%Y.%m.%d-%H%M")"
