--- a/.github/workflows/Ubuntu_kernel_5.10_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_5.10_bbrplus.yml
@@ -18,7 +18,6 @@ on:
         #default: 'false'
 
 env:
-  CONFIG_FILE: .config
   UPLOAD_DIR: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
@@ -92,7 +91,7 @@ jobs:
 
     - name: Generate release tag
       id: tag
-      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep '<td><strong>5.10' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_bbrplus_$(date +"%Y.%m.%d-%H%M")"
