--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -40,6 +40,11 @@ jobs:
         yum install gcc bc ncurses-devel openssl-devel elfutils-libelf-devel rsync glibc-static tmux -y
         yum -y install devtoolset-8 devtoolset-9-libatomic-devel
         mkdir /github/home/.ssh/ && mkdir /workdir
+        scl enable devtoolset-9 bash
+        source /opt/rh/devtoolset-9/enable
+        source scl_source enable devtoolset-9
+        gcc -v
+        cancelled()
 
     - name: Get source code
       working-directory: /workdir
