--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -11,11 +11,11 @@ name: Centos Kernel Latest
 on:
   repository_dispatch:
   workflow_dispatch:
-   inputs:
-     ssh:
-       description: 'SSH connection to Actions'
-       required: false
-       default: 'false'
+   # inputs:
+     # ssh:
+       # description: 'SSH connection to Actions'
+       # required: false
+       # default: 'false'
 
 env:
   UPLOAD_DIR: false
@@ -63,19 +63,15 @@ jobs:
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
-        wget -O 5.10_bbrplus.patch https://raw.githubusercontent.com/ylx2016/kernel/master/convert_official_linux-5.10.x_src_to_bbrplus.patch
-        patch -p0 < 5.10_bbrplus.patch
-        wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config-5.10.27-bbrplus
+        wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
         sudo time make -j$(nproc) rpm-pkg
-        cd /workdir && mv *.deb /workdir/upload
+        mv /root/rpmbuild/RPMS/* /workdir/upload
         echo "::set-output name=status::success"
         echo "FILE_DATE=Kernel_Centos_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         
-       
-
     - name: Check space usage
       if: (!cancelled())
       run: df -hT
