--- a/.github/workflows/Centos_kernel_5.10_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_5.10_bbrplus.yml
@@ -6,16 +6,16 @@
 # Change from P3TERX
 #
 
-name: Ubuntu Kernel latest BBRPLUS
+name: Centos Kernel 5.10 BBRPLUS
 
 on:
   repository_dispatch:
   workflow_dispatch:
-    #inputs:
+   # inputs:
      # ssh:
-      #  description: 'SSH connection to Actions'
+       # description: 'SSH connection to Actions'
        # required: false
-        #default: 'false'
+       # default: 'false'
 
 env:
   UPLOAD_DIR: false
@@ -25,59 +25,55 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    container: docker.io/centos:7
+    
     steps:
     - name: Checkout
-      uses: actions/checkout@main
-
-    - name: Initialization environment
-      env:
-        DEBIAN_FRONTEND: noninteractive
+      uses: actions/checkout@v2
+      
+    - name: intall deps
       run: |
-        sudo -E sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl -y
-        sudo -E apt-get -qq build-dep linux -y
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /workdir
-        sudo mkdir -p /workdir/upload
-        sudo chown $USER:$GROUPS /workdir
-        sudo chown $USER:$GROUPS /workdir/upload
+        yum update -y
+        yum install epel-release -y && yum install ansible -y && yum install openssh-clients -y
+        yum install -y wget tar gcc automake autoconf libtool make zip unzip centos-release-scl scl-utils bzip2 wget curl jq htop sudo time patch
+        yum groups install development -y
+        yum install gcc bc ncurses-devel openssl-devel elfutils-libelf-devel rsync glibc-static tmux -y
+        yum -y install devtoolset-9 devtoolset-9-libatomic-devel
+        mkdir /github/home/.ssh/ && mkdir /workdir
 
     - name: Get source code
       working-directory: /workdir
       run: |
         df -hT $PWD
-        kernel_file=$(curl -s https://www.kernel.org/ | grep 'alt="Download"' | awk -F '"' '{print $2}')
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | grep '<td><strong>5.10' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
+        kernel_file=https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-$kernel_ver.tar.xz
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
-
+        
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}         
 
     - name: Compile the kernel
       id: compile
       working-directory: /workdir
       run: |
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | grep '<td><strong>5.10' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
         wget -O 5.10_bbrplus.patch https://raw.githubusercontent.com/ylx2016/kernel/master/convert_official_linux-5.10.x_src_to_bbrplus.patch
         patch -p0 < 5.10_bbrplus.patch
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config-5.10.27-bbrplus
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
-        sudo time make -j$(nproc) deb-pkg
-        cd /workdir && mv *.deb /workdir/upload
+        ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
+        sudo time make -j$(nproc) rpm-pkg
+        mv /root/rpmbuild/RPMS/* /workdir/upload
         echo "::set-output name=status::success"
-        echo "FILE_DATE=Kernel_Ubuntu_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV   
-
+        echo "FILE_DATE=Kernel_Centos_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        
     - name: Check space usage
       if: (!cancelled())
       run: df -hT
@@ -93,10 +89,9 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_latest_bbrplus_$(date +"%Y.%m.%d-%H%M")"
+        kernel_ver=$(curl -s https://www.kernel.org/ | grep '<td><strong>5.10' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
+        echo "::set-output name=release_tag::Centos_Kernel_${kernel_ver}_bbrplus_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "only for Cloud VMs" >> release.txt
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
@@ -109,8 +104,8 @@ jobs:
         body_path: release.txt
         files: /workdir/upload/*
 
-   # - name: Delete workflow runs
-   #   uses: GitRML/delete-workflow-runs@main
-   #   with:
-   #     retain_days: 1
-   #     keep_minimum_runs: 3
+    #- name: Delete workflow runs
+    #  uses: GitRML/delete-workflow-runs@main
+    #  with:
+    #    retain_days: 1
+    #    keep_minimum_runs: 3
