--- a/.github/workflows/Centos_kernel_5.10_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_5.10_bbrplus.yml
@@ -92,6 +92,7 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep '<td><strong>5.10' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         echo "::set-output name=release_tag::Centos_Kernel_${kernel_ver}_bbrplus_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
+        echo "only for Cloud VMs" >> release.txt
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
