--- a/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
@@ -71,7 +71,7 @@ jobs:
         sudo time make -j$(nproc) rpm-pkg
         mv /root/rpmbuild/RPMS/* /workdir/upload
         echo "::set-output name=status::success"
-        echo "FILE_DATE=Kernel_Centos_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=Kernel_Centos_$xanmod_stable$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         
     - name: Check space usage
       if: (!cancelled())
