--- a/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
@@ -82,12 +82,15 @@ jobs:
         tar xvf bison-3.7.2.tar.xz && cd bison-3.7.2
         ./configure
         time make -j 2 && make install
-        echo "export export PATH=/usr/local/gcc-10.3.0/bin:$PATH" >> /etc/profile
-        echo "export LD_LIBRARY_PATH=/usr/local/gcc-10.3.0/lib64:$LD_LIBRARY_PATH" >> /etc/profile
-        #mv /usr/bin/gcc /usr/bin/gcc-4.8
-        #mv /usr/bin/g++ /usr/bin/g++-4.8
-        #ln -s /usr/local/gcc-10.3.0/bin/gcc /usr/bin/gcc
-        #ln -s /usr/local/gcc-10.3.0/bin/g++ /usr/bin/g++        
+        #echo "export export PATH=/usr/local/gcc-10.3.0/bin:$PATH" >> /etc/profile
+        #echo "export LD_LIBRARY_PATH=/usr/local/gcc-10.3.0/lib64:$LD_LIBRARY_PATH" >> /etc/profile
+        mv /usr/bin/gcc /usr/bin/gcc-4.8
+        mv /usr/bin/g++ /usr/bin/g++-4.8
+        ln -s /usr/local/gcc-10.3.0/bin/gcc /usr/bin/gcc
+        ln -s /usr/local/gcc-10.3.0/bin/g++ /usr/bin/g++
+        mv /usr/lib64/libstdc++.so.6 /usr/lib64/libstdc++.so.6.bak
+        ln -s /usr/local/gcc-10.3.0/lib64/libstdc++.so.6 /usr/lib64/libstdc++.so.6
+
 
     - name: Get source code
       working-directory: /workdir
