--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -25,6 +25,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    #container: docker.io/centos:7
     container: https://hub.docker.com/r/teddysun/rpmbuild:7
     
     steps:
