--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -26,7 +26,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     #container: docker.io/centos:7
-    container: https://hub.docker.com/r/teddysun/rpmbuild:7
+    container: hub.docker.com/r/teddysun/rpmbuild:7
     
     steps:
     - name: Checkout
