--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -11,6 +11,8 @@ name: Ubuntu Kernel Latest
 on:
   repository_dispatch:
   workflow_dispatch:
+  schedule:
+    - cron: '33 35 12 ? * 2,4,7'
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
@@ -46,14 +48,28 @@ jobs:
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
 
+    - name: Check for updates
+      id: check
+      run: |
+        github_ubuntu_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Ubuntu_Kernel' | grep '_latest_bbr_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
+        if [ "$github_ubuntu_ver" == "$kernel_ver" ];then
+            echo "::set-output name=status::fail"
+        else
+            echo "::set-output name=status::success"
+        fi
+
     - name: Get source code
+      id: code
       working-directory: /workdir
+      if: steps.check.outputs.status == 'success'
       run: |
         df -hT $PWD
         kernel_file=$(curl -s https://www.kernel.org/ | grep 'alt="Download"' | awk -F '"' '{print $2}')
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
+        echo "::set-output name=status::success"
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
@@ -64,6 +80,7 @@ jobs:
 
     - name: Compile the kernel
       id: compile
+      if: steps.code.outputs.status == 'success'
       working-directory: /workdir
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
@@ -77,7 +94,7 @@ jobs:
         echo "FILE_DATE=Kernel_Ubuntu_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV   
 
     - name: Check space usage
-      if: (!cancelled())
+      if: (!cancelled()) && steps.compile.outputs.status == 'success'
       run: df -hT
 
     - name: Upload
