--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -11,6 +11,8 @@ name: Centos Kernel Latest BBRPLUS
 on:
   repository_dispatch:
   workflow_dispatch:
+  schedule:
+    - cron: '33 35 12 ? * 2,4,7'
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
@@ -40,8 +42,20 @@ jobs:
         yum install gcc bc ncurses-devel openssl-devel elfutils-libelf-devel rsync glibc-static tmux -y
         yum -y install devtoolset-9 devtoolset-9-libatomic-devel
         mkdir /github/home/.ssh/ && mkdir /workdir
+        
+    - name: Check for updates
+      id: check
+      run: |
+        github_centos_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep '_latest_bbrplus_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
+        if [ "$github_centos_ver" == "$kernel_ver" ];then
+            echo "::set-output name=status::fail"
+        else
+            echo "::set-output name=status::success"
+        fi        
 
     - name: Get source code
+      id: code
       working-directory: /workdir
       run: |
         df -hT $PWD
@@ -49,6 +63,7 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
+        echo "::set-output name=status::success"
         
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
@@ -59,6 +74,7 @@ jobs:
 
     - name: Compile the kernel
       id: compile
+      if: steps.code.outputs.status == 'success'
       working-directory: /workdir
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
@@ -75,7 +91,7 @@ jobs:
         echo "FILE_DATE=Kernel_Centos_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         
     - name: Check space usage
-      if: (!cancelled())
+      if: (!cancelled()) && steps.compile.outputs.status == 'success'
       run: df -hT
 
     - name: Upload
