--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -54,7 +54,8 @@ jobs:
         fi        
 
     - name: Get source code
-      id: code    
+      id: code
+      if: steps.check.outputs.status == 'success'
       working-directory: /workdir
       run: |
         df -hT $PWD
