--- a/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
@@ -6,10 +6,12 @@
 # Change from P3TERX
 #
 
-name: Centos Kernel XANMOD STABLE GCC9
+name: Centos Kernel latest XANMOD STABLE GCC9
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 21 * * *"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
